--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,16 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <!-- <style>
+    .main{
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-weight: 600;
+      font-size: 72px;
+    }</style>
+    <h1 class="main">Best Social Media Platform</h1> -->
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
